  DefaultEntityModelTest refactored to improve testing of the above
  EntityTablePanel.initializeRefreshToolbar() bug fixed, WHEN_ANCESTOR_OF_FOCUSED_COMPONENT used instead of WHEN_IN_FOCUSED_WINDOW, which resulted in the detail panel being refreshed instead
  EntityDefinitionImpl.checkForPrimaryKey() now includes the entityID in the exception
  EntityApplicationPanel.getParentWindow() added
  EntityEditModel.insert(), update(), delete() no longer throw CancelException
  EntityEditPanel, no longer handles the above exception
  DefaultEntityModel.initialize() only sets the relevant values in the edit model if the edit model entity is new, so as to not change a persistent entity
  EntityUiUtil.createComboBox() sets transfer focus on enter on both the editor as well as the combobox itself, thereby handling both editable and non-editable
  DefaultEntityComboBoxModel.linkForeignKeyComboBoxModel() now throws an exception if the foreign key combobox model is not of the required type
  EntityUtil.getDistinctPropertyValues() overloaded with includeNullValue parameter
  DefaultEntityComboBoxModel.linkForeignKeyComboBoxModel() made an instance function on EntityComboBoxModel
  EntityTableModel.getPropertyColumnIndex(propertyID) added
  DefaultFilteredComboBoxModel, constructor overloaded with Comparator parameter
  ItemComboBoxModel, constructor overloaded with Comparator parameter
  EntityUiUtil.createValueListComboBox() overloaded with sortItems parameter
  EntityEditPanel.createValueListComboBox() overloaded with sortItems parameter
  FilteredComboBoxModel.is/setFilterSelectedItem() added
  PropertySearchPanel redundant tool tips removed from input fields
  FilteredTablePanel.selectTableColumns(), bug fixed
  AbstractValueLink constructor overloaded with enabledObserver parameter, all the way up through AbstractBeanValueLink, ToggleBeanValueLink and Controls
  UiUtil.showImage() now sets the wait cursor while the image is being loaded and rendered