@@ -2474,3 +2474,4 @@
   FilteredTablePanel.selectTableColumns(), bug fixed
   AbstractValueLink constructor overloaded with enabledObserver parameter, all the way up through AbstractBeanValueLink, ToggleBeanValueLink and Controls
   UiUtil.showImage() now sets the wait cursor while the image is being loaded and rendered
+  InputProviderPanel.isEditAccepted() renamed to isInputAccepted()
